--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,26 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body, html { 
+  width: 100%; overflow-x: hidden;
+ } 
+ 
+ #root {
+  min-height:100%; position:relative;
+ } 
+ 
+ .ui.grid { margin: 0;
+ } 
+ 
+ .text.white { 
+   color: #FFFFFF; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+ .text.grey {
+   color: #CCCCCC;
 }
+   
+ .text.black {
+   color: #1B1C1D; 
+} 
+
+ .text.yellow { 
+   color: #F2C61F;
+ }
